adding images back for mobile and adjusting top margin1

--- a/tile1.css
+++ b/tile1.css
@@ -275,6 +275,7 @@
 
      .tile-image {
          height: 14vh;
+         display: block;
      }
 
      .overflow_box_hide {
@@ -334,6 +335,7 @@
 
      .tile-image {
          height: 40vh;
+         display: block;
      }
 
      .vjdemo_header {
@@ -364,6 +366,7 @@
 
      .tile-image {
          height: 40vh;
+         display: block;
      }
 
      .vjdemo_header {
@@ -390,6 +393,7 @@
 
      .tile-image {
          height: 17vh;
+         display: block;
      }
 
      .overflow_box_hide {
@@ -448,6 +452,7 @@
 
      .tile-image {
          height: 40vh;
+         display: block;
      }
 
      .vjdemo_header {
@@ -475,6 +480,7 @@
 
      .tile-image {
          height: 12vh;
+         display: block;
      }
 
      .overflow_box_hide {
@@ -534,6 +540,7 @@
 
      .tile-image {
          height: 40vh;
+         display: block;
      }
 
      .vjdemo_header {
@@ -570,6 +577,7 @@
 
      .tile-image {
          height: 41vh;
+         display: block;
      }
 
      .vjdemo_header {
@@ -601,6 +609,7 @@
 
      .tile-image {
          height: 14vh;
+         display: block;
      }
 
      .vjdemo_header {
@@ -642,6 +651,7 @@
 
      .tile-image {
          height: 24vh;
+         display: block;
      }
 
      .vjdemo_header {
@@ -678,6 +688,7 @@
 
      .tile-image {
          height: 14vh;
+         display: block;
      }
 
      .overflow_box_hide {
@@ -744,6 +755,7 @@
 
      .tile-image {
          height: 13vh;
+         display: block;
      }
 
      .vjdemo_header {
@@ -787,6 +799,7 @@
 
      .tile-image {
          height: 26vh;
+         display: block;
      }
 
      .vjdemo_header {
@@ -823,6 +836,7 @@
 
      .tile-image {
          height: 14vh;
+         display: block;
      }
 
      .overflow_box_hide {
@@ -895,6 +909,7 @@
 
      .tile-image {
          height: 33vh;
+         display: block;
      }
 
      .vjdemo_header {
