--- a/style.css
+++ b/style.css
@@ -318,7 +318,49 @@ ul {
 }
 
 /* DESKTOP  NARROW 3, TALL VERSION */
-@media screen and (width <=532px) and (height >=210px) {
+@media screen and (400px <= width <=532px) and (height >=210px) {
+    .nav ul {
+        flex-direction: row;
+        top: -2vh;
+        margin-left: -2.5vw;
+
+
+    }
+
+
+    .overflow_box_hide {
+
+        display: none;
+
+    }
+
+    .content-section {
+        margin-top: -1vh;
+    }
+
+    .content-section1 {
+
+        font-size: 2.5rem;
+        padding-top: var(--margin_top);
+        margin-top: 1vh;
+
+    }
+
+    .link_event_promo {
+        margin-top: 6.5vh;
+    }
+
+    .footer {
+        font-size: 1rem;
+    }
+}
+
+@media screen and (341px <= width <=399px) and (height >=210px){}
+
+
+
+/* DESKTOP  NARROW 3, TALL VERSION */
+@media screen and (width <=340px) and (height >=210px) {
     .nav ul {
         flex-direction: row;
         top: -2vh;
@@ -500,7 +542,7 @@ ul {
 }
 
 /* MOBILE VERSION GALAXY S10 Vertical */
-@media screen and (width <=360px) and (700px<=height <=760px) {
+@media screen and (width <=360px) and (600px<=height <=760px) {
 
     .nav ul {
         font-size: 1.2rem;
