mobile size media range adjustments3

--- a/tile1.css
+++ b/tile1.css
@@ -195,8 +195,8 @@
  }
 
 
- /* DESKTOP  NARROW 4 VERSION */
- @media screen and (524px <= width <=629px) and (height >=210px) {
+/*  DESKTOP  NARROW 4 VERSION */
+ @media screen and (width <=629px) and (height >=210px) {
 
      .g-container {
          padding-right: 12vw;
@@ -210,7 +210,7 @@
  }
 
  /* DESKTOP  NARROW 5 VERSION */
- @media screen and (400px<= width <=523px) and (height >=210px) {
+ @media screen and (width <=523px) and (height >=210px) {
 
      .g-container {
          margin-top: 12vh;
@@ -257,25 +257,7 @@
  }
 
 
- /* DESKTOP SHORT 1, NARROW VERSION */
- @media screen and (width <=500px) and (height <= 500px) {
 
-     .nav ul {
-         flex-direction: row;
-     }
-
-     .tile-image {
-         display: none;
-     }
-
-     .g-container {
-         margin-top: 18vh;
-     }
-
-     .overflow_box_hide {
-         display: block;
-     }
- }
 
 
 
